--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "mss-frontend",
   "private": true,
   "version": "0.1.0",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
   "scripts": {
     "build": "echo nothing to build at root",
     "start": "echo start an individual app"
   },
   "devDependencies": {
+    "@types/react": "^19.1.7",
+    "@types/react-native": "^0.73.0",
+    "@types/react-redux": "^7.1.34",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "react-redux": "^9.0.0"
   }
 }
