--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,5 +6,9 @@
   "peerDependencies": {
     "react": "^18.2.0",
     "react-native": "^0.74.0"
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.7",
+    "@types/react-dom": "^19.1.6"
   }
 }
