--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,14 +48,16 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8.15.5
+          
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'pnpm'
-
-      - name: Install pnpm
-        run: npm install -g pnpm@8.15.5
 
       - name: Install dependencies
         run: pnpm install
