--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -1,8 +1,10 @@
 {
+  "cli": {
+    "version": ">= 3.0.0",
+    "appVersionSource": "appVersion"
+  },
   "build": {
     "production": {
-      "developmentClient": false,
-      "distribution": "internal",
       "android": {
         "buildType": "apk"
       }
