--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -4,7 +4,16 @@
     "slug": "mss-mobile",
     "version": "1.0.0",
     "sdkVersion": "51.0.0",
-    "platforms": ["ios", "android"],
-    "jsEngine": "hermes"
+    "platforms": [
+      "ios",
+      "android"
+    ],
+    "jsEngine": "hermes",
+    "extra": {
+      "eas": {
+        "projectId": "29b6b4a6-44ff-47da-acfe-065f113b3951"
+      }
+    },
+    "owner": "jmalyik"
   }
 }
