--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -14,6 +14,9 @@
         "projectId": "29b6b4a6-44ff-47da-acfe-065f113b3951"
       }
     },
-    "owner": "jmalyik"
+    "owner": "jmalyik",
+    "android": {
+      "package": "com.jmalyik.mssmobile"
+    }
   }
 }
