--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,15 +8,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mss-frontend/store": "workspace:*",
+    "@mss-frontend/ui": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.0.0",
-    "@mss-frontend/store": "workspace:*",
-    "@mss-frontend/ui": "workspace:*"
+    "react-redux": "^9.0.0"
   },
   "devDependencies": {
-    "vite": "^5.2.0",
+    "@types/react-dom": "^19.1.6",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.4.5"
+    "react-router-dom": "^7.6.2",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.0"
   }
 }
