--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -9,11 +9,16 @@
     "ios": "expo start --ios"
   },
   "dependencies": {
-    "expo": "^51.0.0",
+    "@mss-frontend/store": "workspace:*",
+    "@mss-frontend/ui": "workspace:*",
+    "@react-native-picker/picker": "^2.11.0",
+    "@react-navigation/native": "^7.1.10",
+    "@react-navigation/native-stack": "^7.3.14",
+    "expo": "^51.0.39",
     "react": "^18.2.0",
     "react-native": "^0.74.0",
-    "react-redux": "^9.0.0",
-    "@mss-frontend/ui": "workspace:*",
-    "@mss-frontend/store": "workspace:*"
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1",
+    "react-redux": "^9.0.0"
   }
 }
