--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "expo": "^51.0.39",
     "lightweight-charts": "^5.0.7",
     "react-native-web": "^0.20.0",
     "react-redux": "^9.0.0"
