--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "start": "echo start an individual app"
   },
   "devDependencies": {
-    "@types/react": "^19.1.7",
+    "@types/react": "^19.1.8",
     "@types/react-native": "^0.73.0",
     "@types/react-redux": "^7.1.34",
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "expo": "^51.0.39",
+    "expo": "^53.0.11",
     "lightweight-charts": "^5.0.7",
     "react-native-web": "^0.20.0",
     "react-redux": "^9.0.0"
-  }
+  },
+  "workspaces": ["apps/*", "packages/*"]
 }
