--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
+    "react-dom": "19.0.0",
     "react-redux": "^9.0.0"
   },
   "peerDependencies": {
