--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "@mss-frontend/store": "workspace:*",
     "@mss-frontend/ui": "workspace:*",
-    "@react-native-picker/picker": "^2.11.0",
+    "@react-native-picker/picker": "^2.7.5",
+    "@react-native/virtualized-lists": "0.80.0",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
-    "expo": "^51.0.39",
-    "react": "^18.2.0",
-    "react-native": "^0.74.0",
+    "@types/react": "19.1.0",
+    "expo": "^53.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-native": "^0.80.0",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
-    "react-redux": "^9.0.0"
+    "react-native-web": "^0.20.0",
+    "react-redux": "^9.2.0"
   }
 }
