--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,7 +8,11 @@
     "react-native": "^0.74.0"
   },
   "devDependencies": {
-    "@types/react": "^19.1.7",
-    "@types/react-dom": "^19.1.6"
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.6"
+  },
+  "dependencies": {
+    "@react-native-picker/picker": "2.7.5",
+    "react-dom": "18.2.0"
   }
 }
