--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,18 +10,19 @@
   "dependencies": {
     "@mss-frontend/store": "workspace:*",
     "@mss-frontend/ui": "workspace:*",
-    "@react-native-picker/picker": "2.7.5",
-    "@types/react": "19.1.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-native": "0.80.0",
-    "react-redux": "^9.0.0"
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
-    "@types/react-dom": "^19.1.6",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^4.2.1",
-    "react-router-dom": "^7.6.2",
+    "@vitejs/plugin-react": "^4.5.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.5",
+    "react-router-dom": "^6.23.1",
+    "tailwindcss": "^4.1.10",
     "typescript": "^5.4.5",
     "vite": "^5.2.0"
   }
