--- a/package.json
+++ b/package.json
@@ -7,26 +7,24 @@
     "start": "echo start an individual app"
   },
   "devDependencies": {
-    "@types/react": "^19.1.0",
+    "@types/react": "^19.1.8",
     "@types/react-redux": "^7.1.34",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "webpack": "5.99.9",
+    "webpack-cli": "6.0.1"
   },
   "dependencies": {
-    "@react-native-picker/picker": "^2.11.0",
-    "@react-native/virtualized-lists": "0.80.0",
-    "@types/react-dom": "18.2.6",
+    "@types/react-dom": "^19.1.6",
     "add": "^2.0.6",
-    "expo": "^53.0.11",
+    "expo": "53.0.11",
     "lightweight-charts": "^5.0.7",
     "pnpm": "^10.12.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.80.0",
-    "react-native-web": "^0.20.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-redux": "^9.2.0"
   },
   "workspaces": [
-    "apps/*",
+    "apps/web",
     "packages/*"
   ]
 }
