--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -4,15 +4,13 @@
   "main": "index.ts",
   "private": true,
   "dependencies": {
-    "@react-native-picker/picker": "2.7.5",
     "@reduxjs/toolkit": "^2.1.0",
-    "@types/react": "19.1.0",
-    "@types/react-dom": "18.2.6",
-    "react-dom": "19.1.0",
-    "react-native": "0.80.0",
     "react-redux": "^9.0.0"
   },
   "peerDependencies": {
-    "react": "^18.2.0"
+    "react": "18.0.0"
+  },
+  "devDependencies": {
+    "@types/react": "18.0.38"
   }
 }
