--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,15 +4,14 @@
   "main": "index.ts",
   "private": true,
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-native": "^0.74.0"
+    "react": "18.0.0",
+    "react-native": "0.70.5"
   },
   "devDependencies": {
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.6"
+    "@types/react": "18.0.38",
+    "@types/react-dom": "18.0.11"
   },
   "dependencies": {
-    "@react-native-picker/picker": "2.7.5",
     "react-dom": "18.2.0"
   }
 }
