--- a/apps/web/public/config.json
+++ b/apps/web/public/config.json
@@ -1,3 +1,3 @@
 {
-  "LOCAL_GATEWAY_URL": "http://localhost:3000"
+  "LOCAL_GATEWAY_URL": "https://8vceo9xnpj.execute-api.eu-north-1.amazonaws.com"
 }
