--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@mss-frontend/store": "workspace:*",
     "@mss-frontend/ui": "workspace:*",
+    "@react-oauth/google": "^0.12.2",
+    "amazon-cognito-identity-js": "^6.3.15",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-redux": "^9.1.0"
@@ -17,7 +19,6 @@
   "devDependencies": {
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.5.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.5",
