--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -5,12 +5,13 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
+    "@types/react-dom": "18.3.0",
     "react-redux": "^9.0.0"
   },
   "peerDependencies": {
     "react": "18.0.0"
   },
   "devDependencies": {
-    "@types/react": "18.0.38"
+    "@types/react": "18.3.0"
   }
 }
