fixing login issues

--- a/apps/web/public/config.json
+++ b/apps/web/public/config.json
@@ -1,3 +1,6 @@
 {
-  "LOCAL_GATEWAY_URL": "https://8vceo9xnpj.execute-api.eu-north-1.amazonaws.com"
+  "LOCAL_GATEWAY_URL": "https://8vceo9xnpj.execute-api.eu-north-1.amazonaws.com",
+  "COGNITO_USER_POOL_ID": "eu-north-1_pY9zOeu2e",
+  "COGNITO_CLIENT_ID": "6tc22v51cp6nafrrjfq3ugthb7",
+  "GOOGLE_CLIENT_ID": "413905055004-ev8bd9r4begbuq1ud694jq0s31p1979e.apps.googleusercontent.com"
 }
