--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,10 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@mss-frontend/store": "workspace:*",
     "@mss-frontend/ui": "workspace:*",
     "@react-oauth/google": "^0.12.2",
     "amazon-cognito-identity-js": "^6.3.15",
+    "buffer": "^6.0.3",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-redux": "^9.1.0"
