--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,14 +55,48 @@ jobs:
         run: |
           aws s3 cp s3://$WEBHOSTING_BUCKET/ s3://$WEBHOSTING_BUCKET/ \
             --recursive \
-            --exclude "*" --include "*.js" --include "*.css" --include "*.png" --include "*.jpg" --include "*.svg" \
+            --exclude "*" --include "*.js" \
             --metadata-directive REPLACE \
             --cache-control "public, max-age=31536000, immutable" \
+            --content-type "application/javascript" \
+            --region $AWS_REGION
+
+          aws s3 cp s3://$WEBHOSTING_BUCKET/ s3://$WEBHOSTING_BUCKET/ \
+            --recursive \
+            --exclude "*" --include "*.css" \
+            --metadata-directive REPLACE \
+            --cache-control "public, max-age=31536000, immutable" \
+            --content-type "text/css" \
+            --region $AWS_REGION
+
+          aws s3 cp s3://$WEBHOSTING_BUCKET/ s3://$WEBHOSTING_BUCKET/ \
+            --recursive \
+            --exclude "*" --include "*.png" \
+            --metadata-directive REPLACE \
+            --cache-control "public, max-age=31536000, immutable" \
+            --content-type "image/png" \
+            --region $AWS_REGION
+
+          aws s3 cp s3://$WEBHOSTING_BUCKET/ s3://$WEBHOSTING_BUCKET/ \
+            --recursive \
+            --exclude "*" --include "*.jpg" --include "*.jpeg" \
+            --metadata-directive REPLACE \
+            --cache-control "public, max-age=31536000, immutable" \
+            --content-type "image/jpeg" \
+            --region $AWS_REGION
+
+          aws s3 cp s3://$WEBHOSTING_BUCKET/ s3://$WEBHOSTING_BUCKET/ \
+            --recursive \
+            --exclude "*" --include "*.svg" \
+            --metadata-directive REPLACE \
+            --cache-control "public, max-age=31536000, immutable" \
+            --content-type "image/svg+xml" \
             --region $AWS_REGION
 
           aws s3 cp s3://$WEBHOSTING_BUCKET/index.html s3://$WEBHOSTING_BUCKET/index.html \
             --metadata-directive REPLACE \
             --cache-control "no-cache, must-revalidate" \
+            --content-type "text/html" \
             --region $AWS_REGION
 
       - name: Download CloudFront Distribution ID from S3 (if exists)
