--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,51 +53,20 @@ jobs:
 
       - name: Set cache headers for static assets
         run: |
-          aws s3 cp s3://$WEBHOSTING_BUCKET/ s3://$WEBHOSTING_BUCKET/ \
-            --recursive \
-            --exclude "*" --include "*.js" \
-            --metadata-directive REPLACE \
-            --cache-control "public, max-age=31536000, immutable" \
-            --content-type "application/javascript" \
-            --region $AWS_REGION
-
-          aws s3 cp s3://$WEBHOSTING_BUCKET/ s3://$WEBHOSTING_BUCKET/ \
-            --recursive \
-            --exclude "*" --include "*.css" \
-            --metadata-directive REPLACE \
-            --cache-control "public, max-age=31536000, immutable" \
-            --content-type "text/css" \
-            --region $AWS_REGION
-
-          aws s3 cp s3://$WEBHOSTING_BUCKET/ s3://$WEBHOSTING_BUCKET/ \
-            --recursive \
-            --exclude "*" --include "*.png" \
-            --metadata-directive REPLACE \
-            --cache-control "public, max-age=31536000, immutable" \
-            --content-type "image/png" \
-            --region $AWS_REGION
-
-          aws s3 cp s3://$WEBHOSTING_BUCKET/ s3://$WEBHOSTING_BUCKET/ \
-            --recursive \
-            --exclude "*" --include "*.jpg" --include "*.jpeg" \
-            --metadata-directive REPLACE \
-            --cache-control "public, max-age=31536000, immutable" \
-            --content-type "image/jpeg" \
-            --region $AWS_REGION
-
-          aws s3 cp s3://$WEBHOSTING_BUCKET/ s3://$WEBHOSTING_BUCKET/ \
-            --recursive \
-            --exclude "*" --include "*.svg" \
-            --metadata-directive REPLACE \
-            --cache-control "public, max-age=31536000, immutable" \
-            --content-type "image/svg+xml" \
-            --region $AWS_REGION
-
-          aws s3 cp s3://$WEBHOSTING_BUCKET/index.html s3://$WEBHOSTING_BUCKET/index.html \
-            --metadata-directive REPLACE \
+          # Set cache headers for index.html and error.html only (leave assets as-is, since sync sets correct content-type)
+          aws s3 cp apps/web/dist/index.html s3://$WEBHOSTING_BUCKET/index.html \
             --cache-control "no-cache, must-revalidate" \
             --content-type "text/html" \
+            --metadata-directive REPLACE \
             --region $AWS_REGION
+
+          if [ -f apps/web/dist/error.html ]; then
+            aws s3 cp apps/web/dist/error.html s3://$WEBHOSTING_BUCKET/error.html \
+              --cache-control "no-cache, must-revalidate" \
+              --content-type "text/html" \
+              --metadata-directive REPLACE \
+              --region $AWS_REGION
+          fi
 
       - name: Download CloudFront Distribution ID from S3 (if exists)
         run: |
