--- a/apps/web/.env.production
+++ b/apps/web/.env.production
@@ -1,3 +1,3 @@
 # Example production environment file
 # Set your production API endpoint here
-VITE_GATEWAY_URL=https://8vceo9xnpj.execute-api.eu-north-1.amazonaws.com/
+VITE_GATEWAY_URL=https://yax9kdvw03.execute-api.eu-north-1.amazonaws.com/
