--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,11 +15,13 @@
     "@react-oauth/google": "^0.12.2",
     "amazon-cognito-identity-js": "^6.3.15",
     "buffer": "^6.0.3",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.5.2",
